@@ -6,6 +6,8 @@
 3. Fix showing of time-slider when Cantata is started minimized to system tray
    and MPD is playing.
 4. Remove ununsed 'Back' action.
+5. Don't treat albums with artists such as "AlbumArtist ft Oher" as multiple
+   artist albums.
 
 1.3.3
 -----
